<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="derpspace_title" translatable="false">DerpSpace</string>
    <string name="add">Add</string>
    <string name="advanced">Advanced</string>
    <string name="cancel">Cancel</string>
    <string name="default_text">Default</string>
    <string name="dlg_ok">OK</string>
    <string name="attention">Attention</string>
    <string name="loading">Loading\u2026</string>
    <string name="reset">Reset</string>
    <string name="reset_colors">Reset colors</string>
    <string name="reset_android">Android</string>
    <string name="text_title">Text</string>
    <string name="icon_title">Icon</string>
    <string name="color_title">Color</string>
    <string name="colors_title">Colors</string>
    <string name="fingerprint_category">Fingerprint</string>
    <string name="gestures_category">Gestures</string>
    <string name="icons_category">Icons</string>
    <string name="status_bar_category">Statusbar</string>
    <string name="notifications_panel_category">QS panel</string>
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="listview">ListView</string>
    <string name="light_category">Lights</string>
    <string name="udfps_category">Fingerprint On Display</string>
    <string name="general_tweaks_title">General settings</string>
    <string name="lockscreen_shortcuts">Lockscreen Shortcuts</string>
    <string name="lockscreen_tuner_title">Lockscreen Shortcuts</string>
    <string name="lockscreen_ui_title">Lockscreen UI</string>
    <string name="general_category">General</string>
    <string name="flashlight_category">Flashlight</string>
    <string name="misc_derpspace_title">Miscellaneous</string>
    <string name="navigationbar_settings_title">Navigation Bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="quick_settings_title">Quick Settings</string>
    <string name="footer_category">Footer</string>
    <string name="statusbar_items_category">Statusbar Items</string>
    <string name="customisation_title">Customisation</string>
    <string name="battery_title">Battery</string>
    <string name="battery_category">Battery light</string>
    <string name="derpspace_dialog_title">Help us help you!</string>
    <string name="derpspace_dialog_message">If you find a bug with any of these settings, report it in our Telegram Group. You MUST include the following when posting a bug report:\n\n1. A logcat or last_kmsg\n2. Kernel and mods used\n3. Useful information\n\nIf you fail to report something adequately, DO NOT expect things to be fixed.</string>
    <string name="derpspace_dialog_toast">READ THE WHOLE THING!</string>
    <string name="artwork_media_fade_level_summary">Fading the media artwork image</string>
    <string name="qs_tile_vibration_title">Vibration</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="quick_settings_vibrate_duration_title">Vibration duration</string>
    <string name="quick_settings_vibrate_duration_summary">How many milliseconds to vibrate</string>
    <string name="qs_tile_animation_title">Animations</string>
    <string name="qs_tile_animation_style_title">Animation style</string>
    <string name="qs_tile_animation_duration_title">Animation duration</string>
    <string name="qs_tile_animation_interpolator_title">Tiles animation interpolator</string>
    <string name="qs_tile_animation_style_off">No animation</string>
    <string name="qs_tile_animation_style_flip">Flip</string>
    <string name="qs_tile_animation_style_rotate">Rotate</string>
    <string name="qs_tile_animation_duration_low">Low</string>
    <string name="qs_tile_animation_duration_default">Default</string>
    <string name="qs_tile_animation_duration_fast">Fast</string>
    <string name="qs_tile_animation_interpolator_linearInterpolator">Linear</string>
    <string name="qs_tile_animation_interpolator_accelerateInterpolator">Accelerate</string>
    <string name="qs_tile_animation_interpolator_decelerateInterpolator">Decelerate</string>
    <string name="qs_tile_animation_interpolator_accelerateDecelerateInterpolator">Accelerate decelerate</string>
    <string name="qs_tile_animation_interpolator_bounceInterpolator">Bounce</string>
    <string name="qs_tile_animation_interpolator_overshootInterpolator">Overshoot</string>
    <string name="qs_tile_animation_interpolator_anticipateInterpolator">Anticipate</string>
    <string name="qs_tile_animation_interpolator_anticipateOvershootInterpolator">Anticipate overshoot</string>
    <string name="qs_set_animation_style">%1$s</string>
    <string name="qs_set_animation_duration">%1$s</string>
    <string name="qs_set_animation_interpolator">%1$s</string>
    <string name="show_fourg_icon_title">4G icon</string>
    <string name="show_fourg_icon_summary">Display 4G icon in signal icon instead LTE</string>
    <string name="volte_switch_title">VoLTE icon</string>
    <string name="volte_switch_summary">Display VoLTE icon</string>
    <string name="volte_icon_title">VoLTE icon</string>
    <string name="volte_icon_summary">Display VoLTE icon when available</string>
    <string name="vowifi_icon_title">VoWiFi icon</string>
    <string name="vowifi_icon_summary">Display VoWiFi icon when available</string>
    <string name="volte_vowifi_override_title">VoWiFi override</string>
    <string name="volte_vowifi_override_summary">Hide VoLTE when VoWiFi is available</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding with the toast</string>
    <string name="headsup_category">HeadsUp Settings</string>
    <string name="heads_up_notifications">Heads up</string>
    <string name="heads_up_notifications_summary">Customise heads up notifications settings</string>
    <string name="summary_heads_up_enabled">Pop-up notifications are enabled</string>
    <string name="summary_heads_up_disabled">Pop-up notifications are disabled</string>
    <string name="add_heads_up_package">Add app</string>
    <string name="add_heads_up_blacklist_summary">Disable heads up from these applications</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="profile_choose_app">Choose app</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_delete_message">Remove selected item?</string>
    <string name="heads_up_time_out_title">Time out</string>
    <string name="heads_up_time_out_summary">Peeking notifications will show for <xliff:g id="number">%d</xliff:g> seconds</string>
    <string name="heads_up_time_out_2sec">2 seconds</string>
    <string name="heads_up_time_out_4sec">4 seconds</string>
    <string name="heads_up_time_out_5sec">5 seconds</string>
    <string name="heads_up_time_out_6sec">6 seconds</string>
    <string name="heads_up_time_out_8sec">8 seconds</string>
    <string name="heads_up_time_out_10sec">10 seconds</string>
    <string name="heads_up_snooze_title">Snooze timer</string>
    <string name="heads_up_snooze_summary_one_minute">Swiping up on peeking notifications will snooze heads up from that application for 1 minute</string>
    <string name="heads_up_snooze_summary">Swiping up on peeking notifications will snooze heads up from that application for <xliff:g id="number">%d</xliff:g> minutes</string>
    <string name="heads_up_snooze_disabled_summary">Snooze timer is disabled</string>
    <string name="heads_up_snooze_1min">1 minute</string>
    <string name="heads_up_snooze_5min">5 minutes</string>
    <string name="heads_up_snooze_10min">10 minutes</string>
    <string name="heads_up_snooze_15min">15 minutes</string>
    <string name="heads_up_snooze_20min">20 minutes</string>
    <string name="heads_up_snooze_25min">25 minutes</string>
    <string name="heads_up_snooze_30min">30 minutes</string>
    <string name="heads_up_snooze_1h">1 hour</string>
    <string name="status_bar_quick_qs_pulldown">Quick QS pulldown</string>
    <string name="quick_pulldown_none">Disabled</string>
    <string name="quick_pulldown_right">Pulldown statusbar from right side</string>
    <string name="quick_pulldown_left">Pulldown statusbar from left side</string>
    <string name="qs_edit_title">Edit Icon</string>
    <string name="qs_edit_summary">Enable the tile edit icon in the footer</string>
    <string name="lockscreen_media_blur_title">Media art blur level</string>
    <string name="show_lockscreen_media_art_title">Show media art</string>
    <string name="lockscreen_media_art_options_title">Lockscreen media art</string>
    <string name="fprint_sucess_vib_title">Fingerprint success vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="fprint_error_vib_title">Fingerprint error vibration</string>
    <string name="fprint_error_vib_summary">Vibrate on failed fingerprint authentication</string>
    <string name="qs_brightness_slider_category">Brightness slider</string>
    <string name="qs_show_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_position_title">Position</string>
    <string name="qs_show_auto_brightness_title">Auto brightness icon</string>
    <string name="qs_show_auto_brightness_summary">Show toggle for adaptive brightness near the slider</string>
    <string name="qs_footer_warnings_title">QS footer warnings</string>
    <string name="qs_footer_warnings_summary">Display a warning at bottom of QS panel when network is monitored by external apps or vpn</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Show charging current, voltage, wattage and battery temperature on lockscreen while charging</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="battery_estimate_title">Battery estimate</string>
    <string name="battery_estimate_summary">Display estimated remaining battery life when available</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="vibrate_on_notifications_title">Notification vibration</string>
    <string name="vibrate_on_notifications_summary">Vibrate on notifications</string>
    <string name="reticker_category" translatable="false">reTicker</string>
    <string name="reticker_title">reTicker</string>
    <string name="reticker_summary">Replace your notifications with a redesigned version of tickers. \nSlim and less invasive than a standard notification</string>
    <string name="reticker_colored_title">Use app colored background</string>
    <string name="reticker_colored_summary">Replace reTicker background color using notification app main color</string>
    <string name="reticker_landscape_only_title">Landscape only</string>
    <string name="reticker_landscape_only_summary">Only enable reTicker when device is in landscape mode</string>
    <string name="qs_footer_datausage_title">Data usage</string>
    <string name="qs_footer_datausage_summary">Display data usage summary in quick settings footer</string>
        <string name="lock_screen_custom_clock_face_category">Lock screen Clock</string>
    <string name="lock_screen_custom_clock_face_title">Lock screen clock style</string>
      <string name="qs_header_category_battery">Battery</string>
        <string name="status_bar_battery_percent_title">Battery percent</string>
</resources>