<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 AospExtended ROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/quick_settings_title">


    <PreferenceCategory
        android:title="@string/qs_header_category_battery">

        <!-- Battery styles -->
        <com.statix.support.preferences.SystemSettingListPreference
            android:key="qs_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:entries="@array/qs_battery_style_entries"
            android:entryValues="@array/qs_battery_style_values"
            android:defaultValue="-1" />

        <!-- Battery location -->
        <com.statix.support.preferences.SystemSettingListPreference
            android:key="qs_show_battery_percent"
            android:title="@string/status_bar_battery_percent_title"
            android:entries="@array/status_bar_battery_percent_entries"
            android:entryValues="@array/status_bar_battery_percent_values"
            android:defaultValue="2" />

        <!-- Battery estimate -->
        <com.statix.support.preferences.SystemSettingSwitchPreference
            android:key="qs_show_battery_estimate"
            android:title="@string/battery_estimate_title"
            android:summary="@string/battery_estimate_summary"
            android:defaultValue="false" />

    </PreferenceCategory>


     <PreferenceCategory
        android:key="quick_settings_footer_category"
        android:title="@string/footer_category">

        <com.statix.support.preferences.SystemSettingSwitchPreference
            android:key="qs_footer_data_usage"
            android:title="@string/qs_footer_datausage_title"
            android:summary="@string/qs_footer_datausage_summary"
            android:defaultValue="true" />

        <com.statix.support.preferences.SystemSettingSwitchPreference
            android:key="qs_edit_toggle"
            android:title="@string/qs_edit_title"
            android:summary="@string/qs_edit_summary"
            android:defaultValue="true" />

        <com.statix.support.preferences.SystemSettingSwitchPreference
            android:key="qs_footer_warnings"
            android:title="@string/qs_footer_warnings_title"
            android:summary="@string/qs_footer_warnings_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="quick_settings_brighness_category"
        android:title="@string/qs_brightness_slider_category">

        <com.statix.support.preferences.SecureSettingListPreference
            android:key="qs_show_brightness_slider"
            android:title="@string/qs_show_brightness_slider_title"
            android:entries="@array/qs_show_brightness_slider_entries"
            android:entryValues="@array/qs_show_brightness_slider_values"
            android:defaultValue="2" />

        <com.statix.support.preferences.SecureSettingListPreference
            android:key="qs_brightness_slider_position"
            android:title="@string/qs_brightness_slider_position_title"
            android:entries="@array/qs_brightness_slider_position_entries"
            android:entryValues="@array/qs_brightness_slider_position_values"
            android:defaultValue="0" />

        <com.statix.support.preferences.SecureSettingSwitchPreference
            android:key="qs_show_auto_brightness"
            android:title="@string/qs_show_auto_brightness_title"
            android:summary="@string/qs_show_auto_brightness_summary"
            android:defaultValue="true" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="quick_settings_vibration"
        android:title="@string/qs_tile_vibration_title"/>

        <com.statix.support.preferences.SecureSettingSwitchPreference
            android:key="quick_settings_vibrate"
            android:title="@string/quick_settings_vibrate_title"
            android:summary="@string/quick_settings_vibrate_summary"
            android:defaultValue="false"/>

        <com.statix.support.preferences.SecureSettingSeekBarPreference
            android:key="quick_settings_vibrate_duration"
            android:title="@string/quick_settings_vibrate_duration_title"
            android:summary="@string/quick_settings_vibrate_duration_summary"
            android:max="200"
            android:min="10"
            android:defaultValue="45"
            android:dependency="quick_settings_vibrate" />

</PreferenceScreen>
